sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: not found: value i
  	for(j <- 0 to getValueCount() - 2 - i)
                                            ^