sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3()  {
  var sorted:Boolean = false
  while(!sorted){
    sorted = true
  	for(j <- 0 to getValueCount() - 2 - i)
      if(getValue(j) > getValue(j + 1)){
        swap(j, j + 1)
        sorted = false
      }
  }
}